crates/rustynes-test-harness/tests/snapshots/external_extended__extended_axrom_battletoads_double_dragon.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-007-AxROM/Battletoads & Double Dragon - The Ultimate Team.nes
rom_sha256=124375e4d3fcbc7ae4ee7f25e452e5d62d304dc4bec922b978a4c8da84759b39
frames=600
fb_bytes=245760
cycles=17838520
audio_samples=439524
audio_fnv1a64=f59ebd6067d96c71
checkpoint f600 fb_fnv1a64=6e5cbeafefe0e489
