crates/rustynes-test-harness/tests/snapshots/external_extended__extended_axrom_wizards_and_warriors.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-007-AxROM/Wizards & Warriors.nes
rom_sha256=b23d1d59b489ee93a235954987bc7888a61623db871e8dae91d2e14755a0112a
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=1eae09db8f318c42
checkpoint f600 fb_fnv1a64=d52c852cf2d70c4a
