crates/rustynes-test-harness/tests/snapshots/external_extended__extended_camerica_bee_52.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-071-Camerica/Bee 52.nes
rom_sha256=0c5b19f082c5adbaf96f6b8220b40f2ee82115f3c3c3c446f0864416850b39f4
frames=600
fb_bytes=245760
cycles=17838532
audio_samples=439524
audio_fnv1a64=84d9810347099587
checkpoint f600 fb_fnv1a64=c2cd8ff142203234
