crates/rustynes-test-harness/tests/snapshots/external_extended__extended_camerica_micro_machines.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-071-Camerica/Micro Machines.nes
rom_sha256=ac8795f2c8c9316b360b0a3527f7ac5450f9b59e85b860ea64d54077b9b86854
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=b5d8e07f91babe1a
checkpoint f600 fb_fnv1a64=0b40ee3591bf23b4
