crates/rustynes-test-harness/tests/snapshots/external_extended__extended_jaleco87_choplifter.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-087-Jaleco87/Choplifter (Japan) (En) (Rev 1).nes
rom_sha256=954f10e87ce3877c069bab48e57eda6a474e51a22bfd35ccc926cf490a121de1
frames=600
fb_bytes=245760
cycles=17838520
audio_samples=439524
audio_fnv1a64=26bcb4a9faab97ca
checkpoint f600 fb_fnv1a64=c5ddb8b56131bd2c
