crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m101_urusei_yatsura_lum_no_wedding_bell_a1_t_fre.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-101-JalecoJF10/Urusei Yatsura - Lum no Wedding Bell (J) [a1][T+Fre].nes
rom_sha256=c2724e518502f1f75110b3e051aa65d83e7884b389e8e43896247a534f4f7e28
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=8f146c26efa2dbed
checkpoint f600 fb_fnv1a64=e5aa06b39bb8b70e
